# UnitTestTemplate

./: .gitignore  Makefile  README.md  integration.py
C/exercices/: ex01.c  ex01.gcda  ex01.gcno  ex02.c  ex02.gcda  ex02.gcno
Haskell/: ChangeLog.md  Makefile  README.md  package.yaml
Haskell/app/: Main.hs
Haskell/src/: Lib.hs  MainProgram.hs
Haskell/test/: LibSpec.hs  MainProgramSpec.hs
TDD/: Makefile  test_getnbr_check.c  test_isdigit_check.c
c++/: CMakeLists.txt  Makefile  unit_test_function_ex02.cpp
c++/src/: CoinFlipper.cpp  CoinFlipper.hpp  Rng.hpp  main.cpp
c++/tests/: MockRng.hpp  UnitTest_CoinFlipper.cpp  main.cpp  unit_tests
include/: ex.h  my.h  test.h
src/: isneg.c  main.c
tests/: Makefile  unit_test_function_basic.c  unit_test_function_cinout.c
